# Dry

./: CMakeLists.txt  README.MD  README.md  data.txt
src/: bmi.cpp  bmi.hpp  brutto.cpp  brutto.hpp  fight.cpp  fight.hpp  information.cpp  information.hpp  kontakt.cpp  kontakt.hpp  main.cpp  menu.cpp  menu.hpp  snake.cpp  snake.hpp  spiele.cpp  spiele.hpp  taschenrechner.cpp  taschenrechner.hpp
